# DocSeer

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  Procfile  README.md  alembic.ini  docker-compose.native-ollama.yml  docker-compose.yaml  docseer.example.yaml  generate_env.py  ports.env  pyproject.toml
.github/workflows/: python-publish.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
backend/: Procfile  README.md  config.yaml  t.py
backend/app/: celery_app.py  config.py  database.py  dependencies.py  main.py  ollama_utils.py
backend/app/models/: __init__.py  paper.py
backend/app/routers/: __init__.py  chat.py  papers.py  settings.py  tasks.py
backend/app/schemas/: __init__.py  chat.py  paper.py  task.py
backend/app/services/: __init__.py  ingest.py  metadata.py
backend/app/tasks/: __init__.py  ingest.py
backend/chatbot/: main.py
backend/chunking/: main.py
backend/pdf2md/: main.py
backend/retriever/: main.py
docker/api/: Dockerfile
docker/chatbot/: Dockerfile
docker/ollama/: Dockerfile  entrypoint.sh
docker/tui/: Dockerfile
scripts/: benchmark.py  integration_test.py
src/docseer/: __init__.py  __main__.py  agent.py  config.yaml  formatter.py  processing.py  ui.py  utils.py
src/docseer/agents/: __init__.py  base_agent.py  basic_agent.py  hf_agent.py  local_agent.py  local_react_agent.py  utils.py
src/docseer/chunkers/: __init__.py  docling_chunker.py  parent_child_chunker.py
src/docseer/converters/: __init__.py  (+5 more)
tests/: conftest.py
tests/api/: test_chat.py  test_papers.py  test_tasks.py
tests/integration/: test_converter.py  test_url_import.py
tests/unit/: test_bibtex_converter.py  test_chunker.py  test_converter_server.py  test_ingest_service.py  test_metadata.py  test_remote_converter.py
ui/terminal/: bibtex_import_modal.py  chatbot.py  confirmation_modal.py  docker_logs.py  documents_explorer.py  honcho_servers.py  macro_selector.py  main.py  paper_picker.py  paper_widgets.py  settings_modal.py  style.tcss  style_chatbot.tcss  style_docker_logs.tcss  style_docs.tcss  style_honcho_logs.tcss  utils.py
(+26 files in other folders)
